<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpensePageActivity">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/txt_description"
        android:text="@string/description"
        app:layout_constraintEnd_toStartOf="@+id/txt_description"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_description"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_description"
        android:ems="10"
        android:inputType="text"
        android:singleLine="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/description" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:labelFor="@id/txt_cost"
        android:text="@string/cost"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/btn_save_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="saveExpense"
        android:text="@string/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_note" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:labelFor="@id/txt_note"
        android:text="@string/note"
        app:layout_constraintStart_toStartOf="@+id/cost"
        app:layout_constraintTop_toBottomOf="@+id/cost" />

    <EditText
        android:id="@+id/txt_note"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:autofillHints="@string/hint_note"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBaseline_toBaselineOf="@+id/note"
        app:layout_constraintStart_toStartOf="@+id/txt_cost" />

    <EditText
        android:id="@+id/txt_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_cost"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/cost"
        app:layout_constraintStart_toStartOf="@+id/txt_description" />
</androidx.constraintlayout.widget.ConstraintLayout>